A bit of cleanup & testing

--- a/Chatbot/ansible.cfg
+++ b/Chatbot/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./Ansible/Hosts
+inventory = ./Hosts
 retry_files_enabled = false
 enable_plugins = yaml, ini
 host_key_checking = false
